<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoInternet">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        app:lottie_rawRes="@raw/nointernet"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/baloo"
        android:gravity="center_horizontal"
        android:text="@string/oops_we_are_not_able_to_connect"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@id/anim"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/baloo"
        android:gravity="center_horizontal"
        android:text="@string/please_check_your_internet_connection"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"

        />

    <RelativeLayout
        android:id="@+id/try_again_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/text2"
        android:background="@drawable/gen_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/try_again"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo"/>
    </RelativeLayout>


</RelativeLayout>