<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".Signup_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2.5dp"
            android:src="@drawable/previous" />

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:text="Create\nAccount"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="75sp"
                android:layout_height="100sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/number3" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/baloo"
            android:text="Signup to Start Shopping"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/relativeLayout2">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:theme="@style/editTextTheme"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/nm">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:fontFamily="@font/baloo"
                    android:hint="First Name"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:theme="@style/editTextTheme"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/nm">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:fontFamily="@font/baloo"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shopname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:theme="@style/editTextTheme"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/shpnm">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:fontFamily="@font/baloo"
                    android:hint="Shop Name"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/delfee"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/shopname"
                android:theme="@style/editTextTheme"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/delfee">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:fontFamily="@font/baloo"
                    android:hint="Delivery Fee"
                    android:inputType="number"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shopadd"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/currentLocBtn"
                    android:theme="@style/editTextTheme"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2.5dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:startIconDrawable="@drawable/shpadd">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:fontFamily="@font/baloo"
                        android:hint="Shop Address"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:textColor="@color/black" />


                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/currentLocBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/progressbar_bg"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_my_location_24"
                        app:tint="@color/black" />
                </RelativeLayout>
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:theme="@style/editTextTheme"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.5dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/em">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:fontFamily="@font/baloo"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:theme="@style/editTextTheme"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.5dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/pwd">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:fontFamily="@font/baloo"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/Signupbtn"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_below="@id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/gen_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/baloo"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Signupbtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag"
            android:layout_marginTop="40dp"
            android:background="@drawable/choose_cur_loc_bg"
            android:padding="10dp">


            <TextView
                android:id="@+id/signup_as_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="User"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/dropdown" />

        </RelativeLayout>


    </RelativeLayout>


</ScrollView>